--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
 body {
     font-family: 'Roboto', sans-serif;
     color: #434455;
+    background-color: #FFFFFF;
 }
 
 ul {
@@ -37,6 +38,10 @@ background-color: #FFFFFF;
         color: #2E2F42;
 }
 
+.header-contacts {
+font-style: normal;
+}
+
 .header-contacts-link {
         font-size: 16px;
         line-height: 150%;
@@ -46,7 +51,7 @@ background-color: #FFFFFF;
 
 .header-contacts-link:hover,
 .header-contacts-link:focus {
-    color: #404BBF;
+    color: #404bbf;
     
 }
 
@@ -59,7 +64,6 @@ background-color: #FFFFFF;
         font-size: 56px;
         line-height: 107%;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #FFFFFF;
 }
 
@@ -71,6 +75,12 @@ background-color: #FFFFFF;
         letter-spacing: 0.04em;
         color: #FFFFFF;
         cursor: pointer;
+        background-color: #4D5AE5;
+}
+
+.hero-btn:hover,
+.hero-btn:focus {
+    background-color: #404BBF;
 }
 
 .features {
@@ -113,8 +123,12 @@ background-color: #FFFFFF;
         font-size: 36px;
         line-height: 111%;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #2E2F42;
+        text-transform: capitalize;
+}
+
+.team-list {
+    background-color: #FFFFFF;
 }
 
 .team-subtitle {
@@ -122,7 +136,6 @@ background-color: #FFFFFF;
         font-size: 20px;
         line-height: 120%;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #2E2F42;
 }
 
@@ -130,7 +143,6 @@ background-color: #FFFFFF;
         font-size: 16px;
         line-height: 150%;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #434455;
 }
 
@@ -143,8 +155,8 @@ background-color: #FFFFFF;
         font-size: 36px;
         line-height: 111%;
         letter-spacing: 0.02em;
-        text-align: center;
         color: #2E2F42;
+        text-transform: capitalize;
 }
 
 .portfolio-subtitle {
