--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,6 @@ font-style: normal;
 .header-contacts-link:hover,
 .header-contacts-link:focus {
     color: #404bbf;
-    
 }
 
 .hero {
@@ -65,6 +64,7 @@ font-style: normal;
         line-height: 107%;
         letter-spacing: 0.02em;
         color: #FFFFFF;
+        text-align: center;
 }
 
 .hero-btn {
@@ -118,17 +118,16 @@ font-style: normal;
 .team {
     background-color: #F4F4FD;
 }
-.team-title {
-        font-weight: 700;
-        font-size: 36px;
-        line-height: 111%;
-        letter-spacing: 0.02em;
-        color: #2E2F42;
-        text-transform: capitalize;
-}
-
-.team-list {
-    background-color: #FFFFFF;
+.team-title {font-weight: 700;
+    font-size: 36px;
+    line-height: 111%;
+    letter-spacing: 0.02em;
+    color: #2E2F42;
+    text-transform: capitalize;
+    text-align: center;}
+       
+.team-item {
+background-color: #FFFFFF;
 }
 
 .team-subtitle {
@@ -157,6 +156,7 @@ font-style: normal;
         letter-spacing: 0.02em;
         color: #2E2F42;
         text-transform: capitalize;
+        text-align: center;
 }
 
 .portfolio-subtitle {
